--- a/StarMisik/templates/index.html
+++ b/StarMisik/templates/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>google</title>
-    <link rel="stylesheet" href="./index.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
     <script src="https://kit.fontawesome.com/3c579473f5.js" crossorigin="anonymous"></script>
 </head>
 
@@ -13,7 +13,7 @@
     <div class="container">
         <header>
             <div class="header">
-                <a href="https://psychic-couscous-jq66x6g4jjrfpppr-8000.app.github.dev/"><img src="./img/logo.png"></a>
+                <a href="https://psychic-couscous-jq66x6g4jjrfpppr-8000.app.github.dev/"><img src="{% static 'img/logo.png' %}"></a>
                 
             </div>
         </header>
