--- a/StarMisik/static/css/index.css
+++ b/StarMisik/static/css/index.css
@@ -1,53 +1,77 @@
 html, body {
     margin: 0;
     padding: 0;
-    box-sizing:border-box;
+    box-sizing: border-box;
+    height: 100%;
 }
 
 .container {
-    width: 1000px;
-    margin: 0 auto;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     text-align: center;
 }
 
 .header {
     margin-top: 30px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    padding: 0 20px;
+}
+
+.logo {
+    width: 600px; /* 로고 크기를 키움 */
+}
+
+.auth-buttons {
+    display: flex;
+    gap: 10px;
+}
+
+.auth-button {
+    text-decoration: none;
+    color: white;
+    background-color: #3367D6;
+    padding: 10px 20px;
+    border-radius: 5px;
+}
+
+.auth-button:hover {
+    background-color: #2851A3;
 }
 
 .section {
-    margin: 30px 0px 80px 0;
+    margin: 30px 0 80px 0;
 }
-
 
 .form-bar {
     display: flex;
-    width : 500px;
+    justify-content: center;
+    align-items: center;
+    width: 200px;
     margin: 0 auto;
-    box-shadow:0 1px 6px 0 rgba(32, 33, 36, .28);
     height: 45px;
     border-radius: 30px;
     border: 1px solid white;
     text-indent: 15px;
-    justify-content: space-between;
-    align-items: center;
 }
 
-.search {
+.search-button {
     border: none;
-}
-.search:focus {
-    outline: none;
-    border: none;
-}
-
-.section-contents {
-    display: flex;
-    flex-direction: column;
-    margin-bottom: 50px;
+    background-color: #3367D6;
+    color: white;
+    padding: 10px 20px;
+    border-radius: 20px;
+    cursor: pointer;
 }
 
-.section-contents > div > img {
-    margin: 10px 10px;
+.search-button:hover {
+    background-color: #2851A3;
 }
 
 .footer > form > a > input {
