--- a/StarMisik/templates/index.html
+++ b/StarMisik/templates/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>google</title>
+    <title>StarMisik</title>
+    {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
     <script src="https://kit.fontawesome.com/3c579473f5.js" crossorigin="anonymous"></script>
 </head>
@@ -13,18 +14,20 @@
     <div class="container">
         <header>
             <div class="header">
-                <a href="https://psychic-couscous-jq66x6g4jjrfpppr-8000.app.github.dev/"><img src="{% static 'img/logo.png' %}"></a>
-                
+                <a href="https://psychic-couscous-jq66x6g4jjrfpppr-8000.app.github.dev/">
+                    <img src="{% static 'img/logo.png' %}" class="logo">
+                </a>
+                <div class="auth-buttons">
+                    <a href="{% url 'login' %}" class="auth-button">로그인</a>
+                    <a href="{% url 'signup' %}" class="auth-button">회원가입</a>
+                </div>
             </div>
         </header>
         <section>
             <div class="section">
-                <form action="form.html">
+                <form action="/search" method="get">
                     <div class="form-bar">
-                        <div>
-                        <i class="fas fa-search"></i>
-                        <input class="search" type="text" name="search-bar" placeholder="지역을 입력하세요">
-                        </div>
+                        <input class="search-button" type="submit" value="지역별 DB 탐색">
                     </div>
                 </form>
             </div>
