--- a/StarMisik/static/css/index.css
+++ b/StarMisik/static/css/index.css
@@ -3,42 +3,42 @@ html, body {
     padding: 0;
     box-sizing: border-box;
     height: 100%;
+    font-family: Arial, sans-serif;
 }
 
 .container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    width: 80%;
+    margin: 0 auto;
     text-align: center;
 }
 
 .header {
     margin-top: 30px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    padding: 0 20px;
 }
 
 .logo {
-    width: 600px; /* 로고 크기를 키움 */
+    width: 200px;
+    display: block;
+    margin: 0 auto;
 }
 
 .auth-buttons {
     display: flex;
+    justify-content: flex-end;
     gap: 10px;
+    padding: 10px 20px;
+    position: absolute;
+    top: 0;
+    right: 0;
 }
 
 .auth-button {
     text-decoration: none;
     color: white;
     background-color: #3367D6;
-    padding: 10px 20px;
+    padding: 5px 10px;
     border-radius: 5px;
+    font-size: 14px;
 }
 
 .auth-button:hover {
@@ -81,4 +81,24 @@ html, body {
     border: 1px solid black;
     height: 25px;
     outline: none;
+}
+
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+}
+
+.step-links a {
+    margin: 0 5px;
+    text-decoration: none;
+    color: #3367D6;
+}
+
+.step-links .current {
+    margin: 0 5px;
+}
+
+.step-links a:hover {
+    text-decoration: underline;
 }
