--- a/StarMisik/templates/index.html
+++ b/StarMisik/templates/index.html
@@ -13,19 +13,24 @@
 <body>
     <div class="container">
         <header>
+            <div class="auth-buttons">
+                {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="auth-button">로그아웃</a>
+                <a href="{% url 'mypage' %}" class="auth-button">MyPage</a>
+                {% else %}
+                <a href="{% url 'login' %}" class="auth-button">로그인</a>
+                <a href="{% url 'signup' %}" class="auth-button">회원가입</a>
+                {% endif %}
+            </div>
             <div class="header">
-                <a href="https://psychic-couscous-jq66x6g4jjrfpppr-8000.app.github.dev/">
+                <a href="{% url 'home' %}">
                     <img src="{% static 'img/logo.png' %}" class="logo">
                 </a>
-                <div class="auth-buttons">
-                    <a href="{% url 'login' %}" class="auth-button">로그인</a>
-                    <a href="{% url 'signup' %}" class="auth-button">회원가입</a>
-                </div>
             </div>
         </header>
         <section>
             <div class="section">
-                <form action="/search" method="get">
+                <form action="{% url 'search' %}">
                     <div class="form-bar">
                         <input class="search-button" type="submit" value="지역별 DB 탐색">
                     </div>
@@ -43,4 +48,5 @@
     <script>
     </script>
 </body>
+
 </html>
