--- a/StarMisik/templates/login.html
+++ b/StarMisik/templates/login.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
+    <title>로그인</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 </head>
@@ -22,11 +22,11 @@
                 </a>
             </div>
         </header>
-        <h2>회원가입</h2>
+        <h2>로그인</h2>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit">회원가입</button>
+            <button type="submit">로그인</button>
         </form>
     </div>
 </body>
