--- a/StarMisik/templates/mypage.html
+++ b/StarMisik/templates/mypage.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
+    <title>MyPage</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 </head>
@@ -13,8 +13,8 @@
     <div class="container">
         <header>
             <div class="auth-buttons">
-                <a href="{% url 'login' %}" class="auth-button">로그인</a>
-                <a href="{% url 'signup' %}" class="auth-button">회원가입</a>
+                <a href="{% url 'logout' %}" class="auth-button">로그아웃</a>
+                <a href="{% url 'mypage' %}" class="auth-button">MyPage</a>
             </div>
             <div class="header">
                 <a href="{% url 'home' %}">
@@ -22,12 +22,12 @@
                 </a>
             </div>
         </header>
-        <h2>회원가입</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">회원가입</button>
-        </form>
+        <h2>MyPage</h2>
+        <ul>
+            {% for favorite in favorites %}
+            <li>{{ favorite.address.name }} - {{ favorite.address.address }} - {{ favorite.address.finalscore.new_score }}</li>
+            {% endfor %}
+        </ul>
     </div>
 </body>
 
