--- a/StarMisik/templates/search.html
+++ b/StarMisik/templates/search.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>회원가입</title>
+    <title>지역별 DB 탐색</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 </head>
@@ -13,8 +13,13 @@
     <div class="container">
         <header>
             <div class="auth-buttons">
+                {% if user.is_authenticated %}
+                <a href="{% url 'logout' %}" class="auth-button">로그아웃</a>
+                <a href="{% url 'mypage' %}" class="auth-button">MyPage</a>
+                {% else %}
                 <a href="{% url 'login' %}" class="auth-button">로그인</a>
                 <a href="{% url 'signup' %}" class="auth-button">회원가입</a>
+                {% endif %}
             </div>
             <div class="header">
                 <a href="{% url 'home' %}">
@@ -22,13 +27,13 @@
                 </a>
             </div>
         </header>
-        <h2>회원가입</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">회원가입</button>
-        </form>
+        <h2>지역 선택</h2>
+        <ul>
+            {% for station in stations %}
+                <li><a href="{% url 'restaurants_by_station' station=station %}">{{ station }}</a></li>
+            {% endfor %}
+        </ul>
     </div>
 </body>
-
 </html>
+
