--- a/StarMisik/templates/mypage.html
+++ b/StarMisik/templates/mypage.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,7 +7,6 @@
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/index.css' %}">
 </head>
-
 <body>
     <div class="container">
         <header>
@@ -22,13 +20,36 @@
                 </a>
             </div>
         </header>
-        <h2>MyPage</h2>
-        <ul>
-            {% for favorite in favorites %}
-            <li>{{ favorite.address.name }} - {{ favorite.address.address }} - {{ favorite.address.finalscore.new_score }}</li>
-            {% endfor %}
-        </ul>
+        <h2>{{ user.username }}의 즐겨찾기</h2>
+        <table>
+            <thead>
+                <tr>
+                    <th>가게 이름</th>
+                    <th>주소</th>
+                    <th>최종 별점</th>
+                    <th>Tabelog 별점</th>
+                    <th>Google 별점</th>
+                    <th>즐겨찾기</th>
+                </tr>
+            </thead>
+            <tbody>
+                {% for favorite in favorites %}
+                <tr>
+                    <td>{{ favorite.tabelog.name }}</td>
+                    <td>{{ favorite.tabelog.address }}</td>
+                    <td>{{ favorite.tabelog.final_score.first.new_score|default:"N/A" }}</td>
+                    <td>{{ favorite.tabelog.score|default:"N/A" }}</td>
+                    <td>{{ favorite.tabelog.google.google_score|default:"N/A" }}</td>
+                    <td>
+                        <form method="post" action="{% url 'remove_favorite' favorite.tabelog.id %}">
+                            {% csrf_token %}
+                            <button type="submit">즐겨찾기 삭제</button>
+                        </form>
+                    </td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </body>
-
 </html>
