--- a/StarMisik/templates/mypage.html
+++ b/StarMisik/templates/mypage.html
@@ -27,7 +27,8 @@
                     <th>가게 이름</th>
                     <th>주소</th>
                     <th>최종 별점</th>
-
+                    <th>분류</th>
+                    <th>분류</th>
                     <th>즐겨찾기</th>
                 </tr>
             </thead>
@@ -36,6 +37,7 @@
                 <tr>
                     <td>{{ favorite.tabelog.name }}</td>
                     <td>{{ favorite.tabelog.address }}</td>
+                    <td>{{ favorite.tabelog.menu }}</td>
                     <td>{{ favorite.tabelog.final_score.first.new_score|default:"N/A" }}</td>
                     <td>
                         <form method="post" action="{% url 'remove_favorite' favorite.tabelog.id %}">
