--- a/StarMisik/templates/restaurants_by_station.html
+++ b/StarMisik/templates/restaurants_by_station.html
@@ -39,6 +39,7 @@
                 <tr>
                     <th>가게 이름</th>
                     <th>주소</th>
+                    <th>분류</th>
                     <th>최종 별점</th>
                     <th>즐겨찾기</th>
                 </tr>
@@ -48,6 +49,7 @@
                 <tr>
                     <td>{{ restaurant.name }}</td>
                     <td>{{ restaurant.address }}</td>
+                    <td>{{ restaurant.menu }}</td>
                     <td>{{ restaurant.final_score.first.new_score|default:"N/A" }}</td>
                     <td>
                         {% if user.is_authenticated %}
